--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>socialogy</title>
     <link rel="shortcut icon" type="image/png" href="img/logowhite2.webp">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.rtl.min.css">
     <link rel="stylesheet" href="css/socialogy.min.css">
     <link rel="stylesheet" href="css/socialogy-sliders.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
@@ -317,7 +317,7 @@
                 <div class="slider-center-text-2 px-lg-5 px-1 px-sm-2 pt-5">
                     <div class="slide-center-text-2">
                         <div class="d-flex flex-column align-items-center">
-                            <h3 class="text-center font-slider-h-2">Manage all social network accounts on one page</h3>
+                            <h3 class="text-center font-slider-h-2 mt-md-5">Manage all social network accounts on one page</h3>
                             <p class="text-justify  mt-2 mt-lg-4  font-slider-p-2">
                                 Socialogy platform is a powerful tool to manage and update all social network accounts
                                 in
@@ -339,7 +339,7 @@
                 <div class="slider-center-text-2 px-lg-5 px-1 px-sm-2 pt-5">
                     <div class="slide-center-text-2">
                         <div class="d-flex flex-column align-items-center">
-                            <h3 class="text-center font-slider-h-2">Manage and respond to
+                            <h3 class="text-center font-slider-h-2 mt-md-5">Manage and respond to
                                 direct messages</h3>
                             <p class="text-justify  mt-2 mt-lg-4  font-slider-p-2">
                                 Responding to customers and audiences is one of the main reasons for building trust and
@@ -362,7 +362,7 @@
                 <div class="slider-center-text-2 px-lg-5 px-1 px-sm-2 pt-5">
                     <div class="slide-center-text-2">
                         <div class="d-flex flex-column align-items-center">
-                            <h3 class="text-center font-slider-h-2">Socialogy Instagram smart management</h3>
+                            <h3 class="text-center font-slider-h-2 mt-md-5">Socialogy Instagram smart management</h3>
                             <p class="text-justify mt-2 mt-lg-4 font-slider-p-2">
                                 Socialology is an integrated platform for simultaneous management of social networks and
                                 content collection and content republishing.
